# Residual_Learning_TITA

./: .gitignore  compile_dependecies.sh  environment.yml  info.txt  requirements.txt  tianshou_gpu.yml  tianshou_gpu_explicit.txt
TITA_MJ/: CMakeLists.txt  cpp_build.sh  fin.txt  main.cpp  main_with_Filter.cpp  pixi.toml  wm_build.sh
TITA_MJ/include/: DFIPActionModel.hpp  MPC.hpp  StateFilter.hpp  WalkingManager.hpp  WholeBodyController.hpp  utils.hpp  walkingPlanner.hpp
TITA_MJ/log/sac_logs/saved_weights/20rollout/: events.out.tfevents.1769674012.vostro-5590.9759.0
TITA_MJ/log/sac_logs/saved_weights/20rollout/best_epoch_1/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/20rollout/best_epoch_14/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/20rollout/best_epoch_15/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/20rollout/best_epoch_25/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/20rollout/best_epoch_27/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/20rollout/best_epoch_3/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/20rollout/best_epoch_35/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/20rollout/best_epoch_4/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/20rollout/best_epoch_6/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/20rollout/best_epoch_8/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/20rollout/experiment_info/: experiment_info.txt  training_log.txt
TITA_MJ/log/sac_logs/saved_weights/20rollout/final/: final_actor_state_dict.pt  final_critic_state_dict_1.pt  final_critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/old/debug_3/: events.out.tfevents.1767973811.vostro-5590.283812.0
TITA_MJ/log/sac_logs/saved_weights/old/debug_3/best_epoch_2/: critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/old/debug_3/best_epoch_3/: actor_state_dict.pt
TITA_MJ/log/sac_logs/saved_weights/old/debug_3/best_epoch_4/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/old/debug_3/best_epoch_7/: actor_state_dict.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/old/debug_3/best_epoch_8/: actor_state_dict.pt  critic_state_dict_1.pt
TITA_MJ/log/sac_logs/saved_weights/old/pert1500_5/: events.out.tfevents.1769364576.vostro-5590.931570.0
TITA_MJ/log/sac_logs/saved_weights/old/perturbation/: events.out.tfevents.1768906971.vostro-5590.1759618.0
TITA_MJ/log/sac_logs/saved_weights/old/perturbation_2/: events.out.tfevents.1768986596.vostro-5590.21283.0
TITA_MJ/log/sac_logs/saved_weights/old/perturbation_3/: events.out.tfevents.1769258064.vostro-5590.1462309.0
TITA_MJ/log/sac_logs/saved_weights/old/perturbation_4/: events.out.tfevents.1769271789.vostro-5590.3797232.0
TITA_MJ/log/sac_logs/saved_weights/old/stand_up_logs/: events.out.tfevents.1767959371.vostro-5590.109087.0
TITA_MJ/log/sac_logs/saved_weights/othersave/: events.out.tfevents.1770066912.vostro-5590.1466757.0
TITA_MJ/log/sac_logs/saved_weights/othersave/experiment_info/: experiment_info.txt  training_log.txt
TITA_MJ/log/sac_logs/saved_weights/othersave/final/: final_actor_state_dict.pt  final_critic_state_dict_1.pt  final_critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/pert_ok/: events.out.tfevents.1769769827.vostro-5590.33414.0
TITA_MJ/log/sac_logs/saved_weights/pert_ok/best_epoch_23/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/pert_ok/best_epoch_24/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/pert_ok/best_epoch_27/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/pert_ok/best_epoch_37/: actor_state_dict.pt  critic_state_dict_1.pt  critic_state_dict_2.pt
TITA_MJ/log/sac_logs/saved_weights/pert_ok/experiment_info/: experiment_info.txt  training_log.txt
TITA_MJ/log/sac_logs/saved_weights/pert_ok/final/: final_actor_state_dict.pt  final_critic_state_dict_1.pt  final_critic_state_dict_2.pt
TITA_MJ/old_MPC/: DdpSolver.hpp
TITA_MJ/python_script/: animate.py
TITA_MJ/src/: MPC.cpp  WalkingManager.cpp  WholeBodyController.cpp  utils.cpp  wm.py  wm_binding.cpp
TITA_MJ/tesi/: .gitignore  exp_to_do.txt
TITA_MJ/tesi/papers/presentations/: overview_paper.pptx  tita_architecture
TITA_MJ/tesi/test_python/: gen_heightmap.py  out.txt  plot.py  test_policy.py  tita.py  viewer.py  wm_viewer.py
TITA_MJ/tesi/txt_files/: ideas_and_todo.txt  info_jax_brax.txt  info_tianshou.txt  rand.txt  stand_1_env.txt  todo_01_08.txt  train_param.stxt
TITA_MJ/tita_mj_description/: tita.xml  tita_mj_description  tita_world.xml
TITA_MJ/tita_tensorboard/: evaluations.npz
tita_controller/: CMakeLists.txt  README.md  package.xml
tita_controller/include/: DFIPActionModel.hpp  MPC.hpp  MujocoUI.hpp  StateFilter.hpp  WalkingManager.hpp  WholeBodyController.hpp  oldFIlter.hpp  utils.hpp  walkingPlanner.hpp
tita_controller/python_src/: 2D_plot.py  animate.py  plot_estimate.py  plot_imu.py  plot_odom.py  plot_plan.py  plot_tau.py  plot_trackin_position_error.py  plot_wheel_error.py  save_urdf.py  send_urdf.py  theta_animation.py
tita_controller/src/: MPC.cpp  WalkingManager.cpp  WholeBodyController.cpp  controller_node.cpp  controller_node_sim.cpp  controller_sim_effort.cpp  robot_simulator.cpp  simple_PD.cpp  topic_reader.cpp  utils.cpp
tita_controller/tita_description/: tita.urdf
tita_controller/tita_mj_description/: tita_world.xml
(+176 files in other folders)
